--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,89 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+    .App-logo {
+        animation: App-logo-float infinite 3s ease-in-out;
+    }
 }
 
 .App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
 }
 
 .App-link {
-  color: rgb(112, 76, 182);
+    color: rgb(112, 76, 182);
 }
 
 @keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+body {
+    padding: 10px;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+.box {
+    border: 3px solid #666;
+    background-color: #ddd;
+    border-radius: 0.5em;
+    padding: 10px;
+    cursor: move;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0.2;
+        background-color: white;
+    }
+    100% {
+        opacity: 1;
+        background-color: #ddd;
+    }
+}
+
+.box.over {
+    border: 3px dotted #666;
+    animation: fadeIn infinite 1.2s;
+}
+
+.game-wrapper {
+    width: 500px;
+    height: 500px;
+    margin: auto;
+}
+
+.game-wrapper svg {
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+}
+
+g.horizontal-lines {
+    height: 100%;
 }
