optimisations, refactoring, extracted menu logic to component, added default keybindings, improved menu and hotkeys

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,6 @@
     }
 }
 
-body {
-    padding: 10px;
-}
-
 .container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -106,13 +102,17 @@ g.horizontal-lines {
     color: black;
 }
 
-.menu h1 {
+.game-title {
+    background: #FFC107;
+    color: #673AB7;
+    padding: 15px;
     margin: 0;
     font-size: 2em;
-    letter-spacing: 2px;
+    letter-spacing: -5px;
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Open Sans', Arial, sans-serif;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
 .menu strong {
@@ -121,4 +121,29 @@ g.horizontal-lines {
     letter-spacing: 1.2px;
     background-color: rgb(171 138 109 / 17%);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.menu-items {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.sidebar {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    padding: 40px;
+    background: #ffe4c4;
+    text-align: left;
+}
+
+.sidebar ul {
+    padding: 0;
+}
+
+.sidebar li {
+    list-style: none;
+    font-family: monospace;
+    margin-bottom: 4px;
 }
