--- a/src/features/game/PlayerPrompt/Prompt.css
+++ b/src/features/game/PlayerPrompt/Prompt.css
@@ -10,3 +10,11 @@
     border-radius: 3px;
     box-shadow: 0 0 115px 20px #5e5e5e52;
 }
+
+.prompt-wrapper.show {
+    display: block;
+}
+
+.prompt-wrapper.hide {
+    display: none;
+}
